--- a/008-transform-translate/style.css
+++ b/008-transform-translate/style.css
@@ -1,6 +1,10 @@
+body {
+    background-color: gray;
+}
+
 .rectangle {
-    width: 300px;
-    height: 150px;
+    width: 200px;
+    height: 100px;
     background-color: blue;
     position: absolute;
     top: 50%;
@@ -9,9 +13,9 @@
 }
 
 .circle {
-    background-color: lightblue;
-    width: 130px;
-    height: 130px;
+    background-color: aqua;
+    width: 80px;
+    height: 80px;
     border-radius: 50%;
     position: absolute;
     top: 50%;
